--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "criacao",
         "idade",
+        "imagem",
         "perfil",
+        "senha",
         "usuario"
     ]
 }
