--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,57 @@
 {
     "cSpell.words": [
+        "atual",
+        "botao",
+        "cadastrado",
+        "caracteres",
+        "chamada",
+        "coloquei",
+        "confirmacao",
+        "Confirmar",
+        "Conta",
+        "continuar",
+        "corretos",
         "criacao",
+        "criada",
+        "criar",
+        "criarconta",
+        "deve",
+        "devem",
+        "encontrado",
+        "Entrar",
+        "Erros",
+        "está",
+        "existem",
+        "Fazer",
+        "formcriarconta",
+        "formlogin",
+        "formulario",
+        "formulário",
+        "formulários",
+        "função",
         "idade",
+        "iguais",
         "imagem",
+        "imprimir",
+        "linha",
+        "logado",
+        "mensagem",
+        "nenhum",
+        "nosso",
         "perfil",
+        "preciso",
+        "Sair",
         "senha",
-        "usuario"
+        "senhas",
+        "sucesso",
+        "usario",
+        "usuario",
+        "Usuário",
+        "USUÁRIOS",
+        "validacao",
+        "validado",
+        "vamos",
+        "verificar",
+        "wtforms"
     ]
 }
