--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,22 @@
 {
     "cSpell.words": [
+        "após",
+        "arquivo",
         "atual",
         "botao",
         "cadastrado",
+        "caminho",
         "caracteres",
         "chamada",
         "coloquei",
         "confirmacao",
         "Confirmar",
+        "conseguir",
         "Conta",
         "continuar",
         "corretos",
         "criacao",
+        "criação",
         "criada",
         "criar",
         "criarconta",
@@ -21,29 +26,40 @@
         "Entrar",
         "Erros",
         "está",
+        "excluir",
         "existem",
         "Fazer",
         "formcriarconta",
+        "formfoto",
         "formlogin",
         "formulario",
         "formulário",
         "formulários",
+        "fotos",
         "função",
         "idade",
         "iguais",
         "imagem",
+        "importando",
+        "importar",
         "imprimir",
+        "INSTALANDO",
         "linha",
         "logado",
         "mensagem",
         "nenhum",
         "nosso",
+        "novamente",
         "perfil",
         "preciso",
         "Sair",
+        "salvar",
+        "seguro",
         "senha",
         "senhas",
         "sucesso",
+        "tabelas",
+        "todas",
         "usario",
         "usuario",
         "Usuário",
@@ -51,7 +67,9 @@
         "validacao",
         "validado",
         "vamos",
+        "variavel",
         "verificar",
+        "werkzeug",
         "wtforms"
     ]
 }
